fixed - recommendations text overflow

--- a/my-app/src/assets/style.scss
+++ b/my-app/src/assets/style.scss
@@ -1,5 +1,4 @@
 .App {
-  height: 100vh;
   background: whitesmoke;
   .App-header {
     background-color: #282c34;
@@ -22,6 +21,9 @@
       display: flex;
       flex-direction: row;
       align-items: center;
+      img{
+        height: 25px;
+      }
     }
   }
   .App-search {
@@ -88,15 +90,15 @@
             color: white;
             padding: 15px;
             margin-bottom: 15px;
-            max-height: 25ch;
-            text-overflow: ellipsis;
+            height: 150px;
+            max-height: 150px;
           }
         }
       }
       .movie-card:hover {
         cursor: pointer;
         .movie-card-details{
-          background-color: rgb(0, 0, 0, 0.5);
+          background-color: rgb(0, 0, 0, 0.8);
           display: inline-block;
         }
         .movie-card-img{
